--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
     <header>
         <h1>THE NABESOF</h1>
-        <p>If You’re Heart Is Clear Than Welcome Dear</p>
+        <p>If Youâ€™re Heart Is Clear Than Welcome Dear</p>
     </header>
     <main>
         <h2>All Channels</h2>
@@ -162,24 +162,26 @@
             <a href="https://t.me/thenabesoftech" class="btn">3. NABESOF TELEGRAM</a>
             <a href="https://www.whatsapp.com/channel/0029Vazch6RL7UVbNLDgC80X" class="btn">4. PREMIUM WHATSAPP</a>
             <a href="https://t.me/nabesofpremium" class="btn">5. PREMIUM TELEGRAM</a>
-            <a href="https://www.whatsapp.com/channel/0029Va8f3smKWEKvPUzXQv34" class="btn">6. HACKS WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029Vauy8xN89inoJRcnVH3B" class="btn">7. EARNINGS WHATSAPP</a>
-            <a href="https://t.me/nabesofearnings" class="btn">8. EARNINGS TELEGRAM</a>
+            <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">6. HACKS WHATSAPP</a>
+            <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">7. EARNINGS WHATSAPP</a>
+            <a href="https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93" class="btn">8. EARNINGS TELEGRAM</a>
             <a href="https://www.whatsapp.com/channel/0029VaGG152Dp2Q2dD9MHr3l" class="btn">9. TECH WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029Vam3lMcBA1ep5fMB0Q0J" class="btn">10. BACKUP WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029VauzAz2AjPXMUdFN9C3d" class="btn">11. TALK WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029Vb0fLQL1HspukB5srK0J" class="btn">12. ENGLISH WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029VawhJbE6WaKqnkMoq20Y" class="btn">13. BUSINESS WHATSAPP</a>
+            <a href="https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93" class="btn">13. BUSINESS WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029Vaw8hB0HwXbEsRPJkH1v" class="btn">14. COURSES WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029VaxS5qEG8l5AxFuPoT17" class="btn">15. TELEGRAM EARN</a>
             <a href="https://www.whatsapp.com/channel/0029VaxAp1c0gcfLrwRX6O1W" class="btn">16. DESTRUCTION WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029VawpY1iInlqR5d7Ew128" class="btn">17. TECHNOLOGY WHATSAPP</a>
             <a href="https://www.whatsapp.com/channel/0029Vb1YtkhJpe8a3EW6eD3W" class="btn">18. COMPETITIONS WHATSAPP</a>
             <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">19.WEBSITE DESIGNER GROUP</a>
+            <a href=https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93 class="btn">20.GIVEAWAY GROUP</a>
         </div>
     </main>
     <footer>
         <p>Created By <a href="https://primeunlocked.blogspot.com/" target="_blank">Hussain Baloch</a> | <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1">Contact Us</a></p>
     </footer>
+    <script type='text/javascript' src='//pl25107975.profitablecpmrate.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
 </body>
 </html>
