--- a/index.html
+++ b/index.html
@@ -1,187 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The NABESOF</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>All Channels - NABESOF</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  
+  <style>
+    /* Global Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1a1a2e, #162447);
-            color: #fff;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-        }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #1b2838, #283e56);
+      color: white;
+      text-align: center;
+      overflow-x: hidden;
+      min-height: 100vh;
+    }
 
-        header {
-            margin-top: 50px;
-        }
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 50px;
+      color: #00ffcc;
+      margin-top: 30px;
+      animation: glow 1.5s infinite alternate;
+    }
 
-        h1 {
-            font-size: 4rem;
-            font-weight: 600;
-            color: #00c9ff;
-            text-shadow: 0 0 4px #00c9ff, 0 0 8px #00c9ff, 0 0 13px #00c9ff;
-            letter-spacing: 4px;
-            transition: color 0.3s ease, text-shadow 0.3s ease;
-        }
+    /* Button Grid */
+    .button-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 30px;
+    }
 
-        h1:hover {
-            color: #ff00e6;
-            text-shadow: 0 0 4px #ff00e6, 0 0 8px #ff00e6, 0 0 13px #ff00e6;
-        }
+    .button {
+      display: inline-block;
+      width: 150px;
+      padding: 15px;
+      background-color: #00ffcc;
+      color: black;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center;
+      border-radius: 30px;
+      transition: background-color 0.3s, transform 0.2s;
+      box-shadow: 0 0 10px rgba(0, 255, 204, 0.7);
+    }
 
-        main {
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
+    .button:hover {
+      background-color: #007f66;
+      transform: scale(1.1);
+    }
 
-        h2 {
-            margin-bottom: 20px;
-            font-size: 2rem;
-            color: #00c9ff;
-        }
+    /* Footer Section */
+    footer {
+      margin-top: 50px;
+      padding: 10px;
+      background-color: #111;
+      color: #ccc;
+      font-size: 14px;
+    }
 
-        .button-container {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .btn {
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            background: linear-gradient(45deg, #ff00e6, #00c9ff);
-            color: white;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 5px #ff00e6, 0 0 10px #00c9ff, 0 0 15px #ff00e6;
-            text-decoration: none;
-        }
-
-        .btn:hover {
-            background: linear-gradient(45deg, #00c9ff, #ff00e6);
-            transform: translateY(-4px);
-            box-shadow: 0 0 10px #ff00e6, 0 0 20px #00c9ff;
-        }
-
-        footer {
-            padding: 20px;
-            background: #111;
-            width: 100%;
-            text-align: center;
-            color: #aaa;
-        }
-
-        footer p {
-            font-size: 1rem;
-            color: #00c9ff;
-        }
-
-        footer a {
-            color: #00c9ff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 1024px) {
-            h1 {
-                font-size: 3rem;
-            }
-
-            .button-container {
-                gap: 15px;
-            }
-
-            .btn {
-                font-size: 1.1rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            .button-container {
-                flex-direction: column;
-                gap: 10px;
-            }
-
-            .btn {
-                width: 100%;
-                padding: 12px 0;
-                font-size: 1.1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .btn {
-                font-size: 1rem;
-                padding: 10px 0;
-            }
-        }
-    </style>
+    /* Animations */
+    @keyframes glow {
+      0% { text-shadow: 0 0 5px #00ffcc, 0 0 10px #00ffcc, 0 0 15px #00ffcc; }
+      100% { text-shadow: 0 0 15px #00ffcc, 0 0 30px #00ffcc, 0 0 45px #00ffcc; }
+    }
+    
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .button {
+        width: 120px;
+        padding: 10px;
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>THE NABESOF</h1>
-        <p>If You’re Heart Is Clear Than Welcome Dear</p>
-    </header>
-    <main>
-        <h2>All Channels</h2>
-        <div class="button-container">
-            <a href="https://www.whatsapp.com/channel/0029VaCwEINAYlUOwSwaNI0z" class="btn">1. TECH WHATSAPP</a>
-            <a href="https://t.me/nabesoftech" class="btn">2. TECH TELEGRAM</a>
-            <a href="https://t.me/thenabesoftech" class="btn">3. NABESOF TELEGRAM</a>
-            <a href="https://www.whatsapp.com/channel/0029Vazch6RL7UVbNLDgC80X" class="btn">4. PREMIUM WHATSAPP</a>
-            <a href="https://t.me/nabesofpremium" class="btn">5. PREMIUM TELEGRAM</a>
-            <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">6. HACKS WHATSAPP</a>
-            <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">7. EARNINGS WHATSAPP</a>
-            <a href="https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93" class="btn">8. EARNINGS TELEGRAM</a>
-            <a href="https://www.whatsapp.com/channel/0029VaGG152Dp2Q2dD9MHr3l" class="btn">9. TECH WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029Vam3lMcBA1ep5fMB0Q0J" class="btn">10. BACKUP WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029VauzAz2AjPXMUdFN9C3d" class="btn">11. TALK WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029Vb0fLQL1HspukB5srK0J" class="btn">12. ENGLISH WHATSAPP</a>
-            <a href="https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93" class="btn">13. BUSINESS WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029Vaw8hB0HwXbEsRPJkH1v" class="btn">14. COURSES WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029VaxS5qEG8l5AxFuPoT17" class="btn">15. TELEGRAM EARN</a>
-            <a href="https://www.whatsapp.com/channel/0029VaxAp1c0gcfLrwRX6O1W" class="btn">16. DESTRUCTION WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029VawpY1iInlqR5d7Ew128" class="btn">17. TECHNOLOGY WHATSAPP</a>
-            <a href="https://www.whatsapp.com/channel/0029Vb1YtkhJpe8a3EW6eD3W" class="btn">18. COMPETITIONS WHATSAPP</a>
-            <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1" class="btn">19.WEBSITE DESIGNER GROUP</a>
-            <a href=https://www.profitablecpmrate.com/mn5xs1iew?key=0c3b98d9e5b268fd6aa9b890fadedb93 class="btn">20.GIVEAWAY GROUP</a>
-        </div>
-    </main>
-    <footer>
-        <p>Created By <a href="https://primeunlocked.blogspot.com/" target="_blank">Hussain Baloch</a> | <a href="https://chat.whatsapp.com/IX4vZenZ06O5wH45Mws3s1">Contact Us</a></p>
-    </footer>
-    <script type='text/javascript' src='//pl25107975.profitablecpmrate.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+
+  <!-- Title Section -->
+  <h1>All Channels</h1>
+  <h2>If You’re Heart Is Clear Than Welcome Dear</h2>
+
+  <!-- Buttons Section -->
+  <div class="button-container">
+    <a href="https://www.whatsapp.com/channel/0029VaCwEINAYlUOwSwaNI0z" class="button">TECH WHATSAPP</a>
+    <a href="https://t.me/nabesoftech" class="button">TECH TELEGRAM</a>
+    <a href=" https://t.me/thenabesoftech" class="button">NABESOF TELEGRAM</a>
+    <a href="https://www.whatsapp.com/channel/0029Vazch6RL7UVbNLDgC80X" class="button">PREMUIM WHATSAPP</a>
+    <a href="https://t.me/nabesofpremium" class="button">PREMIUM TELEGRAM</a>
+    <a href="https://www.whatsapp.com/channel/0029Va8f3smKWEKvPUzXQv34" class="button">HACKS WHATSAPP</a>
+    <a href="https://www.whatsapp.com/channel/0029Vauy8xN89inoJRcnVH3B" class="button">EARNINGS WHATSAPP</a>
+    <a href="https://www.whatsapp.com/channel/0029VaGG152Dp2Q2dD9MHr3l" class="button">BACKUP WHATSAPP</a>
+    <a href="https://www.whatsapp.com/channel/0029VaxAp1c0gcfLrwRX6O1W" class="button">WHATSAPP DESTRUCTION</a>
+    <a href="https://www.whatsapp.com/channel/0029VawpY1iInlqR5d7Ew128" class="button">TECHNOLOGY WHATSAPP</a>
+    <a href="https://www.whatsapp.com/channel/0029Vb1YtkhJpe8a3EW6eD3W" class="button">COMPETITON WHATSAPP</a>
+    <a href="https://forwardfishermanbidding.com/rznsma8a?key=90dc43282f224fc14248530822e182b8" class="button">ALSO JOIN</a>
+    <a href="https://forwardfishermanbidding.com/rznsma8a?key=90dc43282f224fc14248530822e182b8" class="button">ALSO JOIN</a>
+    
+  </div>
+
+  <!-- Footer Section -->
+  <footer>
+    Created By Hussain Nawaz
+  </footer>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
+<script type='text/javascript' src='//forwardfishermanbidding.com/0b/80/26/0b8026b4a24329a2c0cd0e02a609e0eb.js'></script>
 </body>
 </html>
